--- a/kubeflow/kfserving/sklearn.yaml
+++ b/kubeflow/kfserving/sklearn.yaml
@@ -1,4 +1,4 @@
-apiVersion: "serving.kubeflow.org/v1beta1"
+apiVersion: "serving.kserve.io/v1alpha2"
 kind: "InferenceService"
 metadata:
   name: "sklearn-iris"
